--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec node src/server.js"
+    "dev": "nodemon --watch src --ext js,json --exec node src/server.js"
   },
   "keywords": [],
   "author": "",
